# 42-CommonCore

./: README.md
Milestone 0/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strchr.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  (+2 more)
Milestone 1/ft_printf/: Makefile  ft_handleprint.c  ft_printf.c  ft_printf_bonus.c  ft_strdup.c  ftprintf  ftprintf.h  libft.h  testprintf.c
Milestone 1/get_next_line/: get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c
Milestone 2/A-Maze-ing/: .flake8  .gitignore  Makefile  README.md  a_maze_ing.py  config.py  config.txt  mazegen-1.0.0-py3-none-any.whl  mlx-2.2-py3-none-any.whl  mlx_renderer.py  mypy.ini  pyproject.toml  requirements.txt
Milestone 2/A-Maze-ing/algorithm/: README.md  __init__.py  wilson_generator.py
Milestone 2/push_swap/: .Makefile.un~  .README.md.un~  .greedy.c.un~  .largesort.c.un~  .libpushswap.h.un~  .normalize.c.un~  .push.c.un~  .push_swap.c.un~  .radix.c.un~  .rand_gen.c.un~  .reverse.c.un~  .rotate.c.un~  .swap.c.un~  (+23 more)
(+214 files in other folders)
