# Project packaging configuration
# Defines project metadata and build settings for creating the mazegen wheel package

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Maze generator using Wilson's algorithm"
requires-python = ">=3.10"
authors = [{name = "joshde-s"}, {name = "jpaim-so"}]
readme = "algorithm/README.md"

[tool.setuptools.packages.find]
include = ["algorithm*"]
